[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/zylann.hterrain/tools/exporter/export_image_dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.hterrain/tools/util/dialog_fitter.tscn" type="PackedScene" id=2]

[node name="ExportImageDialog" type="WindowDialog"]
margin_left = 77.0
margin_top = 64.0
margin_right = 577.0
margin_bottom = 264.0
rect_min_size = Vector2( 500, 250 )
window_title = "Export heightmap as image"
resizable = true
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Grid" type="GridContainer" parent="VB"]
margin_right = 484.0
margin_bottom = 76.0
custom_constants/hseparation = 16
columns = 2

[node name="OutputPathLabel" type="Label" parent="VB/Grid"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Output path:"

[node name="OutputPath" type="HBoxContainer" parent="VB/Grid"]
margin_left = 101.0
margin_right = 484.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HeightmapPathLineEdit" type="LineEdit" parent="VB/Grid/OutputPath"]
margin_right = 355.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HeightmapPathBrowseButton" type="Button" parent="VB/Grid/OutputPath"]
margin_left = 359.0
margin_right = 383.0
margin_bottom = 24.0
text = "..."

[node name="FormatLabel" type="Label" parent="VB/Grid"]
margin_top = 31.0
margin_right = 85.0
margin_bottom = 45.0
text = "Format:"

[node name="FormatSelector" type="OptionButton" parent="VB/Grid"]
margin_left = 101.0
margin_top = 28.0
margin_right = 484.0
margin_bottom = 48.0

[node name="HeightRangeLabel" type="Label" parent="VB/Grid"]
margin_top = 57.0
margin_right = 85.0
margin_bottom = 71.0
text = "Height range:"

[node name="HeightRange" type="HBoxContainer" parent="VB/Grid"]
margin_left = 101.0
margin_top = 52.0
margin_right = 484.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="VB/Grid/HeightRange"]
margin_top = 5.0
margin_right = 24.0
margin_bottom = 19.0
text = "Min"

[node name="HeightRangeMin" type="SpinBox" parent="VB/Grid/HeightRange"]
margin_left = 28.0
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
min_value = -10000.0
max_value = 10000.0
step = 0.0
value = -2000.0

[node name="Label2" type="Label" parent="VB/Grid/HeightRange"]
margin_left = 132.0
margin_top = 5.0
margin_right = 158.0
margin_bottom = 19.0
text = "Max"

[node name="HeightRangeMax" type="SpinBox" parent="VB/Grid/HeightRange"]
margin_left = 162.0
margin_right = 262.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
min_value = -10000.0
max_value = 10000.0
step = 0.0
value = 2000.0

[node name="HeightRangeAutoButton" type="Button" parent="VB/Grid/HeightRange"]
margin_left = 266.0
margin_right = 383.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Auto"

[node name="ShowInExplorerCheckbox" type="CheckBox" parent="VB"]
margin_top = 80.0
margin_right = 484.0
margin_bottom = 104.0
text = "Show in explorer after export"

[node name="Spacer" type="Control" parent="VB"]
margin_top = 108.0
margin_right = 484.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 16 )

[node name="Label" type="Label" parent="VB"]
margin_top = 128.0
margin_right = 484.0
margin_bottom = 159.0
text = "Note: height range is needed for integer image formats, as they can't directly represent the real height. 8-bit formats may cause precision loss."
autowrap = true

[node name="Spacer2" type="Control" parent="VB"]
margin_top = 163.0
margin_right = 484.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 16 )

[node name="Buttons" type="HBoxContainer" parent="VB"]
margin_top = 183.0
margin_right = 484.0
margin_bottom = 203.0
custom_constants/separation = 32
alignment = 1

[node name="ExportButton" type="Button" parent="VB/Buttons"]
margin_left = 173.0
margin_right = 225.0
margin_bottom = 20.0
text = "Export"

[node name="CancelButton" type="Button" parent="VB/Buttons"]
margin_left = 257.0
margin_right = 311.0
margin_bottom = 20.0
text = "Cancel"

[node name="DialogFitter" parent="." instance=ExtResource( 2 )]

[connection signal="text_changed" from="VB/Grid/OutputPath/HeightmapPathLineEdit" to="." method="_on_HeightmapPathLineEdit_text_changed"]
[connection signal="pressed" from="VB/Grid/OutputPath/HeightmapPathBrowseButton" to="." method="_on_HeightmapPathBrowseButton_pressed"]
[connection signal="item_selected" from="VB/Grid/FormatSelector" to="." method="_on_FormatSelector_item_selected"]
[connection signal="pressed" from="VB/Grid/HeightRange/HeightRangeAutoButton" to="." method="_on_HeightRangeAutoButton_pressed"]
[connection signal="pressed" from="VB/Buttons/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VB/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
